--- a/QuanLyThuVien.UI/App.config
+++ b/QuanLyThuVien.UI/App.config
@@ -41,7 +41,7 @@
         <value></value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
-        <value>Segoe UI;9.75</value>
+        <value>SF Pro Display;9.75</value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
         <value />
