--- a/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
+++ b/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
@@ -214,6 +214,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UC\Pages\ucPageSach.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC\Pages\ucPageSach.Designer.cs">
+      <DependentUpon>ucPageSach.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC\ucDocGia.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -310,6 +316,7 @@
   <ItemGroup>
     <None Include="Resources\forward.svg" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
