--- a/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
+++ b/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BanSaoSachService.cs" />
     <Compile Include="Services\NXBService.cs" />
     <Compile Include="Services\SachService.cs" />
     <Compile Include="Services\TacGiaService.cs" />
+    <Compile Include="Services\ThanhVienService.cs" />
     <Compile Include="Services\TheLoaiService.cs" />
   </ItemGroup>
   <ItemGroup>
