--- a/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
+++ b/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
@@ -212,25 +212,33 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\ICrudOperations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlErrorTranslator.cs" />
+    <Compile Include="UC\Pages\ucPageBanSaoSach.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC\Pages\ucPageBanSaoSach.Designer.cs">
+      <DependentUpon>ucPageBanSaoSach.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC\Pages\ucPageSach.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UC\Pages\ucPageSach.Designer.cs">
       <DependentUpon>ucPageSach.cs</DependentUpon>
     </Compile>
-    <Compile Include="UC\ucDocGia.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\ucDocGia.Designer.cs">
-      <DependentUpon>ucDocGia.cs</DependentUpon>
-    </Compile>
     <Compile Include="UC\ucSach.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UC\ucSach.Designer.cs">
       <DependentUpon>ucSach.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC\ucThanhVien.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC\ucThanhVien.Designer.cs">
+      <DependentUpon>ucThanhVien.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
@@ -246,11 +254,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="UC\ucDocGia.resx">
-      <DependentUpon>ucDocGia.cs</DependentUpon>
+    <EmbeddedResource Include="UC\Pages\ucPageBanSaoSach.resx">
+      <DependentUpon>ucPageBanSaoSach.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC\Pages\ucPageSach.resx">
+      <DependentUpon>ucPageSach.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UC\ucSach.resx">
       <DependentUpon>ucSach.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC\ucThanhVien.resx">
+      <DependentUpon>ucThanhVien.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="packages.config" />
@@ -316,7 +330,9 @@
   <ItemGroup>
     <None Include="Resources\forward.svg" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\actions_refresh.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('..\packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
