--- a/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
+++ b/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
@@ -222,17 +222,17 @@
     <Compile Include="UC\Pages\ucPageBanSaoSach.Designer.cs">
       <DependentUpon>ucPageBanSaoSach.cs</DependentUpon>
     </Compile>
-    <Compile Include="UC\Pages\ucPageGiaHanSach.cs">
+    <Compile Include="UC\Pages\ucPageChiTiet.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UC\Pages\ucPageGiaHanSach.Designer.cs">
-      <DependentUpon>ucPageGiaHanSach.cs</DependentUpon>
+    <Compile Include="UC\Pages\ucPageChiTiet.Designer.cs">
+      <DependentUpon>ucPageChiTiet.cs</DependentUpon>
     </Compile>
-    <Compile Include="UC\Pages\ucPageMuonSach.cs">
+    <Compile Include="UC\Pages\ucPageDanhSach.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="UC\Pages\ucPageMuonSach.Designer.cs">
-      <DependentUpon>ucPageMuonSach.cs</DependentUpon>
+    <Compile Include="UC\Pages\ucPageDanhSach.Designer.cs">
+      <DependentUpon>ucPageDanhSach.cs</DependentUpon>
     </Compile>
     <Compile Include="UC\Pages\ucPageNXB.cs">
       <SubType>UserControl</SubType>
@@ -257,12 +257,6 @@
     </Compile>
     <Compile Include="UC\Pages\ucPageTheLoai.Designer.cs">
       <DependentUpon>ucPageTheLoai.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UC\Pages\ucPageTraSach.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC\Pages\ucPageTraSach.Designer.cs">
-      <DependentUpon>ucPageTraSach.cs</DependentUpon>
     </Compile>
     <Compile Include="UC\ucMuonTra.cs">
       <SubType>UserControl</SubType>
@@ -298,6 +292,12 @@
     </Compile>
     <EmbeddedResource Include="UC\Pages\ucPageBanSaoSach.resx">
       <DependentUpon>ucPageBanSaoSach.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC\Pages\ucPageChiTiet.resx">
+      <DependentUpon>ucPageChiTiet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC\Pages\ucPageDanhSach.resx">
+      <DependentUpon>ucPageDanhSach.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UC\Pages\ucPageNXB.resx">
       <DependentUpon>ucPageNXB.cs</DependentUpon>
