--- a/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
+++ b/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Services\BanSaoSachService.cs" />
     <Compile Include="Services\BaoCaoService.cs" />
     <Compile Include="Services\ChiTietPhieuMuonService.cs" />
+    <Compile Include="Services\DashboardService.cs" />
     <Compile Include="Services\LichSuThanhToanService.cs" />
     <Compile Include="Services\MuonSachProcService.cs" />
     <Compile Include="Services\NXBService.cs" />
