--- a/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
+++ b/QuanLyThuVien.UI/QuanLyThuVien.UI.csproj
@@ -90,6 +90,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EventBus.cs" />
+    <Compile Include="frmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,12 @@
     <Compile Include="UC\ucMuonTra.Designer.cs">
       <DependentUpon>ucMuonTra.cs</DependentUpon>
     </Compile>
+    <Compile Include="UC\ucNguoiDung.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC\ucNguoiDung.Designer.cs">
+      <DependentUpon>ucNguoiDung.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC\ucPhat.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -184,6 +196,9 @@
     <Compile Include="UC\ucThanhVien.Designer.cs">
       <DependentUpon>ucThanhVien.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -222,6 +237,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UC\ucMuonTra.resx">
       <DependentUpon>ucMuonTra.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC\ucNguoiDung.resx">
+      <DependentUpon>ucNguoiDung.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UC\ucPhat.resx">
       <DependentUpon>ucPhat.cs</DependentUpon>
