--- a/QuanLyThuVien.UI/App.config
+++ b/QuanLyThuVien.UI/App.config
@@ -131,4 +131,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <!-- Email Configuration -->
+    <add key="SmtpHost" value="smtp.gmail.com" />
+    <add key="SmtpPort" value="587" />
+    <add key="FromEmail" value="binhmetal05@gmail.com" />
+    <add key="FromPassword" value="sgwh jcdy ypir dqid" />
+  </appSettings>
 </configuration>
