--- a/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
+++ b/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CauHinhService.cs" />
     <Compile Include="Services\BanSaoSachService.cs" />
     <Compile Include="Services\BaoCaoService.cs" />
     <Compile Include="Services\ChiTietPhieuMuonService.cs" />
