phan quyen cap db, 99%

--- a/QuanLyThuVien.UI/App.config
+++ b/QuanLyThuVien.UI/App.config
@@ -6,7 +6,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="QuanLyThuVienConnectionString" connectionString="Server=.;Database=QuanLyThuVien;Trusted_Connection=True;TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
+    <add name="QuanLyThuVien_Integrated" connectionString="Server=.;Database=QuanLyThuVien;Trusted_Connection=True;TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
+	  <add name="QuanLyThuVienConnectionString" connectionString="Server=.;Database=QuanLyThuVien;User ID={0};Password={1};Encrypt=false;TrustServerCertificate=true;Connection Timeout=30;" 
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
