--- a/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
+++ b/QuanLyThuVien.BLL/QuanLyThuVien.BLL.csproj
@@ -48,7 +48,10 @@
     <Compile Include="Services\BanSaoSachService.cs" />
     <Compile Include="Services\BaoCaoService.cs" />
     <Compile Include="Services\ChiTietPhieuMuonService.cs" />
+    <Compile Include="Services\ConnectionStringProvider.cs" />
+    <Compile Include="Services\ContextFactory.cs" />
     <Compile Include="Services\DashboardService.cs" />
+    <Compile Include="Services\IConnectionStringProvider.cs" />
     <Compile Include="Services\LichSuThanhToanService.cs" />
     <Compile Include="Services\MuonSachProcService.cs" />
     <Compile Include="Services\NguoiDungService.cs" />
