--- a/QuanLyThuVien.UI/App.config
+++ b/QuanLyThuVien.UI/App.config
@@ -7,13 +7,12 @@
   </configSections>
   <connectionStrings>
     <add name="QuanLyThuVien_Integrated" connectionString="Server=.;Database=QuanLyThuVien;Trusted_Connection=True;TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
-	  <add name="QuanLyThuVienConnectionString" connectionString="Server=.;Database=QuanLyThuVien;User ID={0};Password={1};Encrypt=false;TrustServerCertificate=true;Connection Timeout=30;" 
-         providerName="System.Data.SqlClient" />
+    <add name="QuanLyThuVienConnectionString" connectionString="Server=.;Database=QuanLyThuVien;User ID={0};Password={1};Encrypt=false;TrustServerCertificate=true;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DPIAwarenessMode" serializeAs="String">
-        <value>System</value>
+        <value>PerMonitorV2</value>
       </setting>
       <setting name="RegisterBonusSkins" serializeAs="String">
         <value>True</value>
@@ -43,7 +42,7 @@
         <value></value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
-        <value>SF Pro Display;9.75</value>
+        <value>SF Pro Display;12</value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
         <value />
